style: organize controllers

--- a/frontend-artillery/src/app/app.component.html
+++ b/frontend-artillery/src/app/app.component.html
@@ -1,9 +1,13 @@
-<h1>{{title}}</h1>
+<h1 class="app-title">{{title}}</h1>
+
+<section>
+	<img class="mock-artillery-board" src="assets/artillery-example.png">
+</section>
+
+<app-artillery-controllers></app-artillery-controllers>
 <mat-form-field class="example-full-width">
 	<mat-label>Player Id</mat-label>
 	<input matInput placeholder="player12" [(ngModel)]="player.id">
 </mat-form-field>
 <button mat-raised-button (click)="createGame()">Register</button>
-<app-artillery-controllers></app-artillery-controllers>
-
 <router-outlet></router-outlet>
