feat: create game score board to diaply players and game info

--- a/frontend-artillery/src/app/app.component.html
+++ b/frontend-artillery/src/app/app.component.html
@@ -1,5 +1,7 @@
 <h1 class="app-title">{{title}}</h1>
 
+<app-game-score-board></app-game-score-board>
+
 <section>
 	<img class="mock-artillery-board" src="assets/artillery-example.png">
 </section>
